[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/main/world/environment/lemon/lemon-tree-leaves-sheet.png" type="Texture" id=1]
[ext_resource path="res://src/main/world/environment/outline-material-15.tres" type="Material" id=2]
[ext_resource path="res://src/main/world/environment/lemon/lemon-tree.gd" type="Script" id=3]
[ext_resource path="res://src/main/world/environment/RandomTimer.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/main/world/environment/lemon/lemon-tree-lemons-sheet.png" type="Texture" id=5]
[ext_resource path="res://assets/main/world/environment/lemon/lemon-tree-mouth-sheet.png" type="Texture" id=6]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Leaves:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "default-0"
length = 1.33333
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Leaves:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666667, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "default-1"
length = 1.33333
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Leaves:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666667, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[sub_resource type="Animation" id=9]
resource_name = "default-2"
length = 1.33333
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Leaves:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666667, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Lemons:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "default-0"
length = 9.99999
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Lemons:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666666, 0.999999, 1.33333, 1.66666, 2, 2.33333, 2.66666, 3, 3.33333, 3.66666, 4, 4.33333, 4.66666, 4.99999, 5.33333, 5.66666, 5.99999, 6.33333, 6.66667, 6.99999, 7.33333, 7.66666, 7.99999, 8.33332, 8.66666, 8.99999, 9.33332, 9.66667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 2, 0, 2, 1, 2, 0, 1, 2, 1, 0, 2, 0, 2, 1, 0, 1, 2, 0, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.333333, 0 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "advance_lemon_animation_randomly"
}, {
"args": [  ],
"method": "advance_lemon_animation_randomly"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "default-1"
length = 8.66666
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Lemons:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 5, 6, 5, 6, 5, 7, 5, 7, 6, 7, 5, 6, 7, 6, 5, 7, 5, 7, 6, 5, 6, 7, 5, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "advance_lemon_animation_randomly"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "default-2"
length = 9.33332
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Lemons:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66666, 3, 3.33333, 3.66666, 4, 4.33333, 4.66666, 4.99999, 5.33333, 5.66666, 5.99999, 6.33333, 6.66666, 6.99999, 7.33333, 7.66666, 7.99999, 8.33332, 8.66666, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 10, 11, 10, 11, 10, 12, 10, 11, 10, 12, 10, 12, 11, 10, 12, 11, 12, 10, 12, 11, 12, 11, 10, 11, 10, 11, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "advance_lemon_animation_randomly"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Mouth:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "default-0"
length = 5.99999
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Mouth:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666666, 0.999999, 1.33333, 1.66666, 2, 2.33333, 2.66666, 3, 3.33333, 3.66666, 4, 4.33333, 4.66666, 4.99999, 5.33333, 5.66667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 0, 2, 1, 0, 1, 2, 0, 2, 0, 2, 0, 1, 0, 1, 0, 1, 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "default-1"
length = 5.99999
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Mouth:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666666, 0.999999, 1.33333, 1.66666, 2, 2.33333, 2.66666, 3, 3.33333, 3.66666, 4, 4.33333, 4.66666, 4.99999, 5.33333, 5.66667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 5, 4, 3, 5, 3, 5, 3, 4, 5, 4, 3, 5, 3, 4, 3, 5, 4 ]
}

[sub_resource type="Animation" id=13]
resource_name = "default-2"
length = 5.99999
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Mouth:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666666, 0.999999, 1.33333, 1.66666, 2, 2.33333, 2.66666, 3, 3.33333, 3.66666, 4, 4.33333, 4.66666, 4.99999, 5.33333, 5.66666 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 7, 8, 7, 6, 7, 6, 8, 6, 8, 6, 8, 6, 7, 8, 7, 6, 7 ]
}

[sub_resource type="Animation" id=14]
resource_name = "default-3"
length = 5.99999
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Mouth:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666666, 0.999999, 1.33333, 1.66666, 2, 2.33333, 2.66666, 3, 3.33333, 3.66666, 4, 4.33333, 4.66666, 4.99999, 5.33333, 5.66666 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 10, 11, 10, 9, 11, 9, 11, 10, 9, 11, 10, 11, 9, 11, 10, 9 ]
}

[sub_resource type="Animation" id=15]
resource_name = "default-4"
length = 5.99999
loop = true
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Mouth:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.666666, 0.999999, 1.33333, 1.66666, 2, 2.33333, 2.66666, 3, 3.33333, 3.66666, 4, 4.33333, 4.66666, 4.99999, 5.33333, 5.66666 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 12, 13, 12, 14, 13, 12, 13, 14, 13, 12, 14, 13, 12, 14, 13 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 14 )

[node name="LemonTree" type="KinematicBody2D"]
position = Vector2( 531.162, 536.052 )
script = ExtResource( 3 )

[node name="Leaves" type="Sprite" parent="."]
material = ExtResource( 2 )
position = Vector2( 0, -80 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3

[node name="Lemons" type="Sprite" parent="."]
position = Vector2( 0, -80 )
texture = ExtResource( 5 )
hframes = 5
vframes = 3

[node name="Mouth" type="Sprite" parent="."]
position = Vector2( 0, -80 )
texture = ExtResource( 6 )
hframes = 3
vframes = 5

[node name="LeafPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/default-0 = SubResource( 1 )
anims/default-1 = SubResource( 8 )
anims/default-2 = SubResource( 9 )

[node name="LemonPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/default-0 = SubResource( 5 )
anims/default-1 = SubResource( 10 )
anims/default-2 = SubResource( 11 )

[node name="MouthPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/default-0 = SubResource( 7 )
anims/default-1 = SubResource( 12 )
anims/default-2 = SubResource( 13 )
anims/default-3 = SubResource( 14 )
anims/default-4 = SubResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="LemonChangeTimer" parent="." instance=ExtResource( 4 )]
autostart = true
min_wait_time = 10.0
max_wait_time = 20.0

[connection signal="timeout" from="LemonChangeTimer" to="." method="_on_LemonChangeTimer_timeout"]
